# vm-compatibility-tool

./: .gitignore  App.xaml  App.xaml.cs  CHANGELOG.md  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  README.md  VMFort.pfx  VmCompatibilityTool.csproj  app.manifest  build.bat  export-cert.ps1  index.html  package-lock.json  package.json  quick-build.bat  svelte.config.js  vite.config.ts  vm-compatibility-tool.sln
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: parse_version.py  sign_windows_binary.ps1
.github/workflows/: beta.yml  nightly.yml  release.yml
.omc/: project-memory.json
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json
.omx/plans/: registry-manifest-gui-design-plan.md  todo-beta-v26.04.01.0004-plan.md
docs/: stage4-system-info-auto-save-plan.md  unified-project-plan.md  vbs-registry-disable-guide.md  windows-manual-qa-checklist.md
src/: App.svelte  app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: disable.rs  export.rs  installed_programs.rs  mod.rs  system_info.rs  virtualization.rs
src-tauri/src/models/: installed_program.rs  mod.rs  system_info.rs  virtualization.rs
src-tauri/src/services/: disk_service.rs  event_log_service.rs  installed_program_service.rs  log_service.rs  mod.rs  process_service.rs  registry_manifest.rs  registry_service.rs  wmi_service.rs
src/components/common/: ConfirmDialog.svelte  InspectionSummaryModal.svelte  (+2 more)
src/lib/: app-types.ts
(+7 files in other folders)
