[package]
name = "vm-compatibility-tool"
version = "0.1.0"
edition = "2021"

[lib]
name = "vm_compatibility_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
winresource = "0.1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# Windows 전용 의존성
[target.'cfg(windows)'.dependencies]
wmi = "0.13"
winreg = "0.52"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "s"   # 크기 최적화
lto = true
codegen-units = 1
panic = "abort"
strip = true
